masuk ke program melalui button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Bank Account Assignment</h1>
-    <script type="module" src="./bank_account.js"></script>
+    <script type="text/javascript" src="./bank_account.js"></script>
+    <button onclick="mainFunction()">Masuk</button>
 </body>
 
 </html>
